Add style property system for style-aware widgets
This commit introduces a clean abstraction for widgets to resolve style properties
from external sources (like CSS) while supporting programmatic overrides.

It is designed around a few core concepts:
  - PropertyKey: Identifies a style property by name and knows how to
    convert string values to typed values (e.g., "color" → Color) by
    associating it with a `PropertyConverter`.
  - PropertyConverter: Transforms strings into typed values
    (e.g., "#FF0000" → Color.rgb(255, 0, 0))
  - PropertyResolver: Interface that resolves property values by key,
    allowing widgets to be agnostic of the styling source
  - StyledProperty: Holds a property value with resolution order:
    programmatic value → resolver → default. This is the key to
    agnostic rendering, providing consistent resolution of properties
    across all widgets.

Widgets can now accept a styleResolver and automatically resolve
properties like background, foreground, border-color, and border-type.
This keeps widgets decoupled from any specific styling system while
enabling rich style integration.

This considerably simplifies code, since `Element`s don't have to
deal with styles anymore, and that when not using `toolkit`, styles
don't have to be handled unless they are CSS specific.