@@ -9,13 +9,12 @@
 package dev.tamboui.demo;
 
 import dev.tamboui.css.Styleable;
+import dev.tamboui.css.cascade.CssStyleResolver;
 import dev.tamboui.css.cascade.PseudoClassState;
-import dev.tamboui.css.cascade.ResolvedStyle;
 import dev.tamboui.css.engine.StyleEngine;
 import dev.tamboui.layout.Constraint;
 import dev.tamboui.layout.Layout;
 import dev.tamboui.layout.Rect;
-import dev.tamboui.style.Color;
 import dev.tamboui.style.Style;
 import dev.tamboui.terminal.Backend;
 import dev.tamboui.terminal.BackendFactory;
@@ -25,7 +24,6 @@ import dev.tamboui.text.Line;
 import dev.tamboui.text.Span;
 import dev.tamboui.text.Text;
 import dev.tamboui.widgets.block.Block;
-import dev.tamboui.widgets.block.BorderType;
 import dev.tamboui.widgets.block.Borders;
 import dev.tamboui.widgets.block.Title;
 import dev.tamboui.widgets.list.ListItem;
@@ -35,7 +33,11 @@ import dev.tamboui.widgets.paragraph.Paragraph;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 
 /**
  * CSS Demo showing how to use CSS styling WITHOUT the toolkit module.
@@ -47,6 +49,7 @@ import java.util.*;
  *   <li>Loading and applying CSS with StyleEngine</li>
  *   <li>Creating Styleable implementations for elements</li>
  *   <li>Live theme switching</li>
+ *   <li>CSS-aware widgets that resolve properties automatically</li>
  * </ul>
  * <p>
  * Controls:
@@ -171,11 +174,9 @@ public class CssNoToolkitDemo {
     private void render(Frame frame) {
         Rect area = frame.area();
 
-        // Fill the entire screen with the base CSS style first
-        // This ensures all gaps and unfilled areas have the correct background
-        SimpleStyleable rootStyleable = new SimpleStyleable("Screen", null, Set.of());
-        ResolvedStyle rootStyle = styleEngine.resolve(rootStyleable);
-        frame.buffer().setStyle(area, rootStyle.toStyle());
+        // Resolve root style and fill the entire screen
+        CssStyleResolver rootResolver = resolveStyle("Screen", null, Set.of());
+        frame.buffer().setStyle(area, rootResolver.toStyle());
 
         // Split into header, main content, footer
         var layout = Layout.vertical()
@@ -192,20 +193,12 @@ public class CssNoToolkitDemo {
     }
 
     private void renderHeader(Frame frame, Rect area) {
-        // Resolve style for header using CSS
-        SimpleStyleable headerStyleable = new SimpleStyleable("Panel", null, Set.of("status"));
-        ResolvedStyle headerStyle = styleEngine.resolve(headerStyleable);
-        Style resolvedStyle = headerStyle.toStyle();
+        CssStyleResolver resolver = resolveStyle("Panel", null, Set.of("status"));
 
-        // Get base text style (with background) for creating spans
-        Style baseText = getBaseTextStyle();
-
-        // Create the outer block first
+        // Create the block - CSS properties resolved automatically
         Block headerBlock = Block.builder()
             .borders(Borders.ALL)
-            .borderType(BorderType.ROUNDED)
-            .borderStyle(resolvedStyle)
-            .style(resolvedStyle)
+            .styleResolver(resolver)
             .build();
 
         // Get inner area after borders
@@ -223,15 +216,16 @@ public class CssNoToolkitDemo {
             )
             .split(innerArea);
 
-        // Left: title - use base style with background, then add foreground/modifiers
+        // Left: title
+        Style baseText = resolveStyle("Text", null, Set.of()).toStyle();
         Line titleLine = Line.from(Span.styled(" CSS Demo (No Toolkit) ", baseText.bold().cyan()));
         Paragraph titlePara = Paragraph.builder()
             .text(Text.from(titleLine))
-            .style(resolvedStyle)
+            .styleResolver(resolver)
             .build();
-        frame.renderWidget(titlePara, headerLayout.get(0));
+        frame.renderWidget(titlePara, headerLayout.getFirst());
 
-        // Right: theme and controls - all spans need background from base style
+        // Right: theme and controls
         Line controlsLine = Line.from(
             Span.styled("Theme: ", baseText.dim()),
             Span.styled(currentTheme.toUpperCase(), getAccentStyle()),
@@ -241,7 +235,7 @@ public class CssNoToolkitDemo {
         );
         Paragraph controlsPara = Paragraph.builder()
             .text(Text.from(controlsLine))
-            .style(resolvedStyle)
+            .styleResolver(resolver)
             .build();
         frame.renderWidget(controlsPara, headerLayout.get(2));
     }
@@ -265,40 +259,28 @@ public class CssNoToolkitDemo {
     private void renderList(Frame frame, Rect area) {
         boolean isFocused = focusedPanel == 0;
 
-        // Resolve styles
-        SimpleStyleable listStyleable = new SimpleStyleable("ListContainer", "nav-list", Set.of());
-        PseudoClassState state = isFocused ? PseudoClassState.ofFocused() : PseudoClassState.NONE;
-        ResolvedStyle listStyle = styleEngine.resolve(listStyleable, state, Collections.emptyList());
+        CssStyleResolver listResolver = resolveStyle("ListContainer", "nav-list", Set.of(), isFocused);
+        CssStyleResolver selectedResolver = resolveStyleWithState("ListContainer-item", null, Set.of(), PseudoClassState.ofSelected());
 
-        // Get styles for list items using type-based sub-component naming
-        SimpleStyleable itemStyleable = new SimpleStyleable("ListContainer-item", null, Set.of());
-        ResolvedStyle selectedStyle = styleEngine.resolve(itemStyleable, PseudoClassState.ofSelected(), Collections.emptyList());
-
-        // Create ListItems with positional styles (odd/even)
         List<ListItem> items = new ArrayList<>();
-        for (int i = 0; i < listItems.size(); i++) {
-            // Build pseudo-class state with nth-child position (1-based)
-            PseudoClassState itemState = PseudoClassState.NONE
-                .withFirstChild(i == 0)
-                .withLastChild(i == listItems.size() - 1)
-                .withNthChild(i + 1);  // CSS nth-child is 1-based
-            ResolvedStyle posStyle = styleEngine.resolve(itemStyleable, itemState, Collections.emptyList());
-            items.add(ListItem.from(listItems.get(i)).style(posStyle.toStyle()));
+        for (String item : listItems) {
+            items.add(ListItem.from(item));
         }
 
-        Style listResolvedStyle = listStyle.toStyle();
-        // Get base item style for the highlight symbol
-        ResolvedStyle baseItemStyle = styleEngine.resolve(itemStyleable);
         ListWidget list = ListWidget.builder()
             .items(items)
-            .style(baseItemStyle.toStyle())
-            .highlightStyle(selectedStyle.toStyle())
-            .highlightSymbol(Line.from(Span.styled("> ", baseItemStyle.toStyle())))
+            .itemStyleResolver((index, total) -> {
+                PseudoClassState state = PseudoClassState.NONE
+                    .withFirstChild(index == 0)
+                    .withLastChild(index == total - 1)
+                    .withNthChild(index + 1);
+                return resolveStyleWithState("ListContainer-item", null, Set.of(), state).toStyle();
+            })
+            .highlightStyle(selectedResolver.toStyle())
+            .highlightSymbol("> ")
             .block(Block.builder()
                 .borders(Borders.ALL)
-                .borderType(BorderType.ROUNDED)
-                .borderStyle(listResolvedStyle)
-                .style(listResolvedStyle)
+                .styleResolver(listResolver)
                 .title(Title.from("Navigation"))
                 .build())
             .build();
@@ -308,11 +290,7 @@ public class CssNoToolkitDemo {
 
     private void renderStylesPanel(Frame frame, Rect area) {
         boolean isFocused = focusedPanel == 1;
-
-        // Resolve panel style
-        SimpleStyleable panelStyleable = new SimpleStyleable("Panel", "styles-panel", Set.of());
-        PseudoClassState state = isFocused ? PseudoClassState.ofFocused() : PseudoClassState.NONE;
-        ResolvedStyle panelStyle = styleEngine.resolve(panelStyleable, state, Collections.emptyList());
+        CssStyleResolver resolver = resolveStyle("Panel", "styles-panel", Set.of(), isFocused);
 
         // Build styled text lines
         List<Line> lines = new ArrayList<>();
@@ -323,19 +301,14 @@ public class CssNoToolkitDemo {
         lines.add(styledLine("Success Message", "success"));
         lines.add(styledLine("Info Message", "info"));
 
-        Style stylesPanelResolvedStyle = panelStyle.toStyle();
-        Block block = Block.builder()
-            .borders(Borders.ALL)
-            .borderType(BorderType.ROUNDED)
-            .borderStyle(stylesPanelResolvedStyle)
-            .style(stylesPanelResolvedStyle)
-            .title(Title.from("Style Classes"))
-            .build();
-
         Paragraph paragraph = Paragraph.builder()
             .text(Text.from(lines))
-            .block(block)
-            .style(stylesPanelResolvedStyle)
+            .block(Block.builder()
+                .borders(Borders.ALL)
+                .styleResolver(resolver)
+                .title(Title.from("Style Classes"))
+                .build())
+            .styleResolver(resolver)
             .build();
 
         frame.renderWidget(paragraph, area);
@@ -343,105 +316,83 @@ public class CssNoToolkitDemo {
 
     private void renderAboutPanel(Frame frame, Rect area) {
         boolean isFocused = focusedPanel == 2;
-
-        // Resolve panel style
-        SimpleStyleable panelStyleable = new SimpleStyleable("Panel", "about-panel", Set.of());
-        PseudoClassState state = isFocused ? PseudoClassState.ofFocused() : PseudoClassState.NONE;
-        ResolvedStyle panelStyle = styleEngine.resolve(panelStyleable, state, Collections.emptyList());
-
-        // Get base text style from CSS
-        Style baseTextStyle = getBaseTextStyle();
+        CssStyleResolver resolver = resolveStyle("Panel", "about-panel", Set.of(), isFocused);
+        Style baseTextStyle = resolveStyle("Text", null, Set.of()).toStyle();
 
         List<Line> lines = new ArrayList<>();
         lines.add(Line.from(Span.styled("This demo shows CSS without toolkit.", baseTextStyle)));
-        lines.add(Line.from(Span.styled(" ", baseTextStyle)));  // Empty line with background
+        lines.add(Line.from(Span.styled(" ", baseTextStyle)));
         lines.add(Line.from(Span.styled("Features demonstrated:", baseTextStyle)));
         lines.add(Line.from(Span.styled("  - Backend/Terminal for event loop", baseTextStyle)));
         lines.add(Line.from(Span.styled("  - Widgets rendered directly", baseTextStyle)));
         lines.add(Line.from(Span.styled("  - StyleEngine for CSS", baseTextStyle)));
-        lines.add(Line.from(Span.styled("  - Styleable interface", baseTextStyle)));
-        lines.add(Line.from(Span.styled(" ", baseTextStyle)));  // Empty line with background
+        lines.add(Line.from(Span.styled("  - CSS-aware widgets", baseTextStyle)));
+        lines.add(Line.from(Span.styled(" ", baseTextStyle)));
         lines.add(styledLine("Try pressing [t] to toggle theme!", "info"));
-
-        Style aboutPanelResolvedStyle = panelStyle.toStyle();
-        Block block = Block.builder()
-            .borders(Borders.ALL)
-            .borderType(BorderType.ROUNDED)
-            .borderStyle(aboutPanelResolvedStyle)
-            .style(aboutPanelResolvedStyle)
-            .title(Title.from("About"))
-            .build();
 
         Paragraph paragraph = Paragraph.builder()
             .text(Text.from(lines))
-            .block(block)
-            .style(aboutPanelResolvedStyle)
+            .block(Block.builder()
+                .borders(Borders.ALL)
+                .styleResolver(resolver)
+                .title(Title.from("About"))
+                .build())
+            .styleResolver(resolver)
             .build();
 
         frame.renderWidget(paragraph, area);
     }
 
     private void renderFooter(Frame frame, Rect area) {
-        // Resolve base style from CSS
-        SimpleStyleable footerStyleable = new SimpleStyleable("Panel", null, Set.of());
-        ResolvedStyle resolved = styleEngine.resolve(footerStyleable);
-        Style footerStyle = resolved.toStyle();
+        CssStyleResolver resolver = resolveStyle("Panel", null, Set.of());
+        Style baseText = resolveStyle("Text", null, Set.of()).toStyle();
 
-        // Get base text style with background
-        Style baseText = getBaseTextStyle();
-
-        // Match original footer: "Programmatic + CSS = Powerful Styling"
-        // All spans need the background from base style
         Line footerLine = Line.from(
             Span.styled("Programmatic ", baseText.bold().cyan()),
             Span.styled("+ CSS ", getStyleForClass("primary")),
             Span.styled("= Powerful Styling", getStyleForClass("success"))
         );
 
-        Block footerBlock = Block.builder()
-            .borders(Borders.ALL)
-            .borderType(BorderType.ROUNDED)
-            .borderStyle(footerStyle)
-            .style(footerStyle)
-            .build();
-
         Paragraph footer = Paragraph.builder()
             .text(Text.from(footerLine))
-            .block(footerBlock)
-            .style(footerStyle)
+            .block(Block.builder()
+                .borders(Borders.ALL)
+                .styleResolver(resolver)
+                .build())
+            .styleResolver(resolver)
             .build();
 
         frame.renderWidget(footer, area);
     }
 
-    /**
-     * Creates a styled line using CSS class resolution.
-     */
+    // ═══════════════════════════════════════════════════════════════
+    // Helper methods
+    // ═══════════════════════════════════════════════════════════════
+
+    private CssStyleResolver resolveStyle(String type, String id, Set<String> classes) {
+        return styleEngine.resolve(new SimpleStyleable(type, id, classes));
+    }
+
+    private CssStyleResolver resolveStyle(String type, String id, Set<String> classes, boolean focused) {
+        PseudoClassState state = focused ? PseudoClassState.ofFocused() : PseudoClassState.NONE;
+        return styleEngine.resolve(new SimpleStyleable(type, id, classes), state, Collections.emptyList());
+    }
+
+    private CssStyleResolver resolveStyleWithState(String type, String id, Set<String> classes, PseudoClassState state) {
+        return styleEngine.resolve(new SimpleStyleable(type, id, classes), state, Collections.emptyList());
+    }
+
     private Line styledLine(String text, String cssClass) {
         Style style = getStyleForClass(cssClass);
         return Line.from(Span.styled(text, style));
     }
 
-    /**
-     * Resolves style for a CSS class.
-     */
     private Style getStyleForClass(String cssClass) {
-        SimpleStyleable styleable = new SimpleStyleable("Text", null, Set.of(cssClass));
-        return styleEngine.resolve(styleable).toStyle();
+        return resolveStyle("Text", null, Set.of(cssClass)).toStyle();
     }
 
     private Style getAccentStyle() {
-        // Use theme-indicator id for accent
-        SimpleStyleable styleable = new SimpleStyleable("Text", "theme-indicator", Set.of());
-        return styleEngine.resolve(styleable).toStyle();
-    }
-
-    /**
-     * Resolves the base text style from CSS (matches * selector).
-     */
-    private Style getBaseTextStyle() {
-        SimpleStyleable styleable = new SimpleStyleable("Text", null, Set.of());
-        return styleEngine.resolve(styleable).toStyle();
+        return resolveStyle("Text", "theme-indicator", Set.of()).toStyle();
     }
 
     private void toggleTheme() {
@@ -451,9 +402,6 @@ public class CssNoToolkitDemo {
 
     /**
      * Simple implementation of Styleable for CSS resolution.
-     * <p>
-     * This shows how to create Styleable objects for CSS matching
-     * without using the toolkit's element abstractions.
      */
     private static final class SimpleStyleable implements Styleable {
         private final String type;
